--- a/core/export_presets.cfg
+++ b/core/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../releases/Return to Reality.exe"
+export_path="../releases/windows/Return to Reality.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -16,7 +16,7 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
@@ -32,10 +32,35 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/icon=""
-application/file_version=""
+application/file_version="Alpha 1.1"
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="8-bit Falcons"
+application/product_name="Return to Reality"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
+
+[preset.1]
+
+name="HTML5"
+platform="HTML5"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../releases/web/ReturnToReality.html"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/export_type=0
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/experimental_virtual_keyboard=false
