--- a/core/export_presets.cfg
+++ b/core/export_presets.cfg
@@ -16,7 +16,7 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 binary_format/64_bits=true
-binary_format/embed_pck=true
+binary_format/embed_pck=false
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
@@ -31,25 +31,25 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
-application/file_version="Alpha 1.1"
-application/product_version=""
+application/icon="res://icon.ico"
+application/file_version="1.2"
+application/product_version="1.2-alpha"
 application/company_name="8-bit Falcons"
 application/product_name="Return to Reality"
-application/file_description=""
-application/copyright=""
+application/file_description="Made with Godot Engine"
+application/copyright="None"
 application/trademarks=""
 
 [preset.1]
 
-name="HTML5"
-platform="HTML5"
+name="Mac OSX"
+platform="Mac OSX"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../releases/web/ReturnToReality.html"
+export_path="../releases/mac/Return to Reality.exe.zip"
 script_export_mode=1
 script_encryption_key=""
 
@@ -57,10 +57,42 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-variant/export_type=0
-vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
-html/custom_html_shell=""
-html/head_include=""
-html/canvas_resize_policy=2
-html/experimental_virtual_keyboard=false
+application/name="Return to Reality"
+application/info="Made with Godot Engine"
+application/icon="res://icon.png"
+application/identifier=""
+application/signature=""
+application/short_version="1.2"
+application/version="1.2-alpha"
+application/copyright=""
+display/high_res=true
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+
+[preset.2]
+
+name="Linux/X11"
+platform="Linux/X11"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../releases/linux/Return to Reality.exe.zip.x86_64"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=true
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
