--- a/core/export_presets.cfg
+++ b/core/export_presets.cfg
@@ -96,3 +96,35 @@ texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
+
+[preset.3]
+
+name="HTML5"
+platform="HTML5"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../releases/web/index.html"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.3.options]
+
+custom_template/debug=""
+custom_template/release=""
+application/name="Return to Reality"
+application/info="Made with Godot Engine"
+application/icon="res://icon.png"
+application/identifier=""
+application/signature=""
+application/short_version="1.2"
+application/version="1.2-alpha"
+application/copyright=""
+display/high_res=true
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
