--- a/core/export_presets.cfg
+++ b/core/export_presets.cfg
@@ -32,8 +32,8 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/icon="res://icon.ico"
-application/file_version="1.2"
-application/product_version="1.2-alpha"
+application/file_version="1.2.2"
+application/product_version="1.2.2-alpha"
 application/company_name="8-bit Falcons"
 application/product_name="Return to Reality"
 application/file_description="Made with Godot Engine"
@@ -49,7 +49,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../releases/mac/Return to Reality.exe.zip"
+export_path="../releases/mac/Return to Reality.zip"
 script_export_mode=1
 script_encryption_key=""
 
@@ -62,8 +62,8 @@ application/info="Made with Godot Engine"
 application/icon="res://icon.png"
 application/identifier=""
 application/signature=""
-application/short_version="1.2"
-application/version="1.2-alpha"
+application/short_version="1.2.2"
+application/version="1.2.2-alpha"
 application/copyright=""
 display/high_res=true
 privacy/camera_usage_description=""
@@ -81,7 +81,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../releases/linux/Return to Reality.exe.zip.x86_64"
+export_path="../releases/linux/Return to Reality.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
@@ -114,17 +114,10 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-application/name="Return to Reality"
-application/info="Made with Godot Engine"
-application/icon="res://icon.png"
-application/identifier=""
-application/signature=""
-application/short_version="1.2"
-application/version="1.2-alpha"
-application/copyright=""
-display/high_res=true
-privacy/camera_usage_description=""
-privacy/microphone_usage_description=""
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
+variant/export_type=0
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/experimental_virtual_keyboard=false
